<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Dalughut on 13/06/2021, 11:58
  ~ Copyright (c) 2021 . All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:fitsSystemWindows="false"
    android:background="@color/white"
    tools:context=".view.auth.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextColor="@color/grey_dark"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="70dp"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/dark"
        android:textAllCaps="true"
        android:fontFamily="@font/josefin_sans_bold"
        />

    <AutoCompleteTextView
        android:id="@+id/txtFullName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_inputs"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_marginTop="70dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/fullname"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:imeOptions="actionNext"
        android:theme="@style/EditText.Auth">

        <requestFocus/>

    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_inputs"
        app:layout_constraintTop_toBottomOf="@id/txtFullName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:theme="@style/EditText.Auth">

    </AutoCompleteTextView>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons"
        android:layout_marginTop="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:background="@drawable/btn_agrimart_green"
        app:initialCornerAngle="8dp"
        android:textColor="@color/white"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="8dp"
        app:spinning_bar_width="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:fontFamily="@font/josefin_sans_medium"
            android:textSize="16sp"
            android:textColor="@color/grey_dark"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/agrimart_green"
            android:text="@string/login"
            android:minWidth="0dp"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>