<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Dalughut on 13/06/2021, 11:58
  ~ Copyright (c) 2021 . All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:fitsSystemWindows="false"
    android:background="@color/white"
    tools:context=".view.auth.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/pasword_reset"
        app:titleTextColor="@color/grey_dark"
        app:navigationIcon="@drawable/ic_close"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:textColor="@color/grey"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        android:textAlignment="center"
        android:text="@string/request_password_reset_desc"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <AutoCompleteTextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_inputs"
        app:layout_constraintTop_toBottomOf="@id/txtDescription"
        android:layout_marginTop="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/hint_auth_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:singleLine="true"
        android:theme="@style/EditText.Auth">

        <requestFocus/>

    </AutoCompleteTextView>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons"
        android:layout_marginTop="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:background="@drawable/btn_agrimart_green"
        app:initialCornerAngle="8dp"
        android:textColor="@color/white"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="8dp"
        app:spinning_bar_width="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        />

</androidx.constraintlayout.widget.ConstraintLayout>