<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Dalughut on 13/06/2021, 11:58
  ~ Copyright (c) 2021 . All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:fitsSystemWindows="false"
    android:background="@color/white"
    tools:context=".view.auth.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextColor="@color/grey_dark"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="70dp"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/dark"
        android:textAllCaps="true"
        android:fontFamily="@font/josefin_sans_bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_marginTop="70dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:background="@android:color/transparent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        android:textColorHint="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:boxStrokeWidthFocused="0dp"
        android:lines="1">

        <AutoCompleteTextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_inputs"
            android:hint="@string/hint_auth_password"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:theme="@style/EditText.Auth">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_inputs"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordLayout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:theme="@style/EditText.Auth">

    </AutoCompleteTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons"
        android:layout_marginTop="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:background="@drawable/btn_agrimart_green"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions_prefix"
            android:fontFamily="@font/josefin_sans_medium"
            android:textSize="16sp"
            android:textColor="@color/grey_dark"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTermsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/agrimart_green"
            android:text="@string/terms_and_conditions"
            android:minWidth="0dp"
            android:textAllCaps="false"
            android:minHeight="0dp"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>