<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Dalughut on 13/06/2021, 11:58
  ~ Copyright (c) 2021 . All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:fitsSystemWindows="false"
    android:background="@color/white"
    tools:context=".view.auth.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextColor="@color/grey_dark"
        app:navigationIcon="@drawable/arrow_left"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="70dp"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/dark"
        android:textAllCaps="true"
        android:fontFamily="@font/josefin_sans_bold"
        />

    <AutoCompleteTextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_inputs"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_marginTop="70dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/hint_auth_email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:theme="@style/EditText.Auth">

        <requestFocus/>

    </AutoCompleteTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:background="@android:color/transparent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        android:textColorHint="@color/grey"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:boxStrokeWidthFocused="0dp"
        android:lines="1">

        <AutoCompleteTextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_inputs"
            android:hint="@string/hint_auth_password"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:theme="@style/EditText.Auth">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons"
        android:layout_marginTop="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/btn_agrimart_green"
        app:initialCornerAngle="8dp"
        android:textColor="@color/white"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="8dp"
        app:spinning_bar_width="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayout"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/agrimart_green"
        android:text="@string/forgot_password"
        android:layout_marginTop="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:fontFamily="@font/josefin_sans_medium"
            android:textSize="16sp"
            android:textColor="@color/grey_dark"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/agrimart_green"
            android:text="@string/signup"
            android:minWidth="0dp"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>